# DBMS-Qt

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.5fbe606  CMakeLists.txt.user.oaRoag  ConditionNode.h  CustomDelegate.h  README.md  createuserdialog.cpp  createuserdialog.h  createuserdialog.ui  functionlist.cpp  functionlist.h  functionlist.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  popupwidget.cpp  popupwidget.h  popupwidget.ui  querylist.cpp  querylist.h  querylist.ui  querywidget.cpp  querywidget.h  querywidget.ui  sqlparser.cpp  sqlparser.h  tabledesign.cpp  tabledesign.h  tabledesign.ui  tablelist.cpp  tablelist.h  tablelist.ui  tableshow.cpp  tableshow.h  tableshow.ui  (+20 more)
DBMS_ROOT/data/testdb/: testdb.tb
database/xhy/: test.json
